argo/argocd-ingress-subdomain.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.beepbop.cloud`) # change this to `argocd.yourdomain.xyz`
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.beepbop.cloud`) && Headers(`Content-Type`, `application/grpc`) # change this to `argocd.yourdomain.xyz`
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert-secret-subdomain # The secret where the certificate is read from
